--- a/youyougou-parent/youyougou-sellergoods-service/pom.xml
+++ b/youyougou-parent/youyougou-sellergoods-service/pom.xml
@@ -67,6 +67,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <!--<dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+        </dependency>-->
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
