--- a/youyougou-parent/pom.xml
+++ b/youyougou-parent/pom.xml
@@ -38,7 +38,7 @@
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <freemarker.version>2.3.23</freemarker.version>
         <activemq.version>5.11.2</activemq.version>
-        <security.version>3.2.3.RELEASE</security.version>
+        <security.version>5.0.3.RELEASE</security.version>
         <solrj.version>4.10.3</solrj.version>
         <ik.version>2012_u6</ik.version>
     </properties>
@@ -203,12 +203,22 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-web</artifactId>
-                <version>4.1.0.RELEASE</version>
+                <version>5.0.3.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-config</artifactId>
-                <version>4.1.0.RELEASE</version>
+                <version>5.0.3.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-core</artifactId>
+                <version>5.0.3.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-taglibs</artifactId>
+                <version>5.0.3.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>com.github.penggle</groupId>
@@ -224,7 +234,7 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-cas</artifactId>
-                <version>4.1.0.RELEASE</version>
+                <version>5.0.3.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.jasig.cas.client</groupId>
