05、商品管理1完成

--- a/youyougou-parent/youyougou-common/pom.xml
+++ b/youyougou-parent/youyougou-common/pom.xml
@@ -12,4 +12,15 @@
     <artifactId>youyougou-common</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <!--fastDFS-->
+        <dependency>
+            <groupId>org.csource.fastdfs</groupId>
+            <artifactId>fastdfs</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
+    </dependencies>
 </project>
