--- a/youyougou-parent/youyougou-shop-web/pom.xml
+++ b/youyougou-parent/youyougou-shop-web/pom.xml
@@ -109,7 +109,11 @@
             <artifactId>youyougou-sellergoods-interface</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.yyg.heaven</groupId>
+            <artifactId>youyougou-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
