13、消息中间件ActiveMQ完成

--- a/youyougou-parent/youyougou-shop-web/pom.xml
+++ b/youyougou-parent/youyougou-shop-web/pom.xml
@@ -109,10 +109,25 @@
             <artifactId>youyougou-sellergoods-interface</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.yyg.heaven</groupId>
             <artifactId>youyougou-search-interface</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.13.4</version>
+        </dependency>
+        <!--<dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.13.4</version>
+        </dependency>-->
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.yyg.heaven</groupId>
