--- a/youyougou-parent/youyougou-search-service/pom.xml
+++ b/youyougou-parent/youyougou-search-service/pom.xml
@@ -85,6 +85,17 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.13.4</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.yyg.heaven</groupId>
             <artifactId>youyougou-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
